--- a/Public/admin/index.html
+++ b/Public/admin/index.html
@@ -149,6 +149,14 @@
     textarea{
         height: 200px !important;
     }
+
+    .submenu ul li a{
+        padding-left: 30px !important;
+    }
+    .active ul li a{
+        padding-left: 30px !important;
+    }
+
 </style>
 <body>
 <div class="site-holder">
@@ -183,7 +191,7 @@
                         <a class="dropdown" href="#" data-original-title="Tables"><i class="glyphicon glyphicon-th-list"></i><span
                                 class="hidden-minibar">  首页管理 <span class="badge bg-primary pull-right">1</span></a>
                         <ul>
-                            <li><a href="index.html" data-original-title="Basic"><i
+                            <li><a href="index.html"  data-original-title="Basic"><i
                                     class="fa fa-table"></i><span> 内容管理</span></a>
                             </li>
                         </ul>
