--- a/Public/admin/menu.html
+++ b/Public/admin/menu.html
@@ -193,6 +193,13 @@
     textarea{
         height: 200px !important;
     }
+
+    .submenu ul li a{
+        padding-left: 30px !important;
+    }
+    .active ul li a{
+        padding-left: 30px !important;
+    }
 </style>
 <body>
 <div class="site-holder">
