--- a/Public/admin/news.html
+++ b/Public/admin/news.html
@@ -171,6 +171,13 @@
     #example tr td {
         text-align: center
     }
+
+    .submenu ul li a{
+        padding-left: 30px !important;
+    }
+    .active ul li a{
+        padding-left: 30px !important;
+    }
 </style>
 <body>
 <div class="site-holder">
