--- a/Public/admin/member.html
+++ b/Public/admin/member.html
@@ -154,6 +154,13 @@
     pre{
         padding: 0;
     }
+
+    .submenu ul li a{
+        padding-left: 30px !important;
+    }
+    .active ul li a{
+        padding-left: 30px !important;
+    }
 </style>
 <body>
 <div class="site-holder">
