--- a/Public/home/team.html
+++ b/Public/home/team.html
@@ -142,7 +142,7 @@
         color: #fff;
     }
 
-    pre{background-color: #ffffff;border: 0;font-size: 16px; text-align: center; font-family: 'Microsoft YaHei', sans-serif}
+    pre{background-color: #ffffff;border: 0;font-size: 16px; text-align: left; font-family: 'Microsoft YaHei', sans-serif}
 
 </style>
 <script>
