--- a/Public/admin/news.html
+++ b/Public/admin/news.html
@@ -178,6 +178,14 @@
     .active ul li a{
         padding-left: 30px !important;
     }
+
+    pre{
+        padding: 0;
+    }
+
+    textarea{
+        height: 300px !important;
+    }
 </style>
 <body>
 <div class="site-holder">
