--- a/Public/home/news_detail.html
+++ b/Public/home/news_detail.html
@@ -123,7 +123,7 @@
         background-color: #ffffff;
         border: 0;
         font-size: 16px;
-        text-align: center;
+        text-align: left;
         font-family: 'Microsoft YaHei', sans-serif
     }
 
