--- a/Public/home/case.html
+++ b/Public/home/case.html
@@ -85,11 +85,11 @@
             "Maison Capital&nbsp;&nbsp;&nbsp;&nbsp;Copy Right©&nbsp;&nbsp;|&nbsp;&nbsp;<a href='law.html' style='text-decoration: none;color: #fff'>Legal explanation</a></div>");
             $('#top').empty();
             $('#top').append("<div style='text-align: right'><a href='case.html' style='text-decoration: none; color: #000'>中文</a>&nbsp;|&nbsp;<a href='case.html?status=1' style='text-decoration: none; color: #9b761d'>English</a>" +
-            "</div><ul style='list-style: none;'><li><a href='contact.html?status=1' style='text-decoration: none;' id='contact'>Contact Us</a></li>" +
-            "<li><a href='news.html?status=1' style='text-decoration: none;' id='news'>News</a></li>" +
-            "<li><a href='case.html?status=1' style='text-decoration: none;color: #9b761d'>Investment Case</a></li>" +
-            "<li><a href='team.html?status=1' style='text-decoration: none;' id='team'>Investment Team</a></li>" +
-            "<li><a href='abort.html?status=1' style='text-decoration: none;' id='abort'>About Us</a></li></ul>");
+            "</div><ul style='list-style: none;'><li><a href='contact.html?status=1' style='text-decoration: none;' id='contact'>CONTACTS</a></li>" +
+            "<li><a href='news.html?status=1' style='text-decoration: none;' id='news'>NEWS</a></li>" +
+            "<li><a href='case.html?status=1' style='text-decoration: none;color: #9b761d'>INVESTEMNT</a></li>" +
+            "<li><a href='team.html?status=1' style='text-decoration: none;' id='team'>TEAM</a></li>" +
+            "<li><a href='abort.html?status=1' style='text-decoration: none;' id='abort'>ABOUT US</a></li></ul>");
             index(1);
             area(0);
         } else {
@@ -626,7 +626,7 @@
                 </div>
             </div>
             <div class='menu menu_en' id="industry_en" onclick="index(1)" style='width: 180px;'>
-                <span>Industry</span>
+                <span>BY SECTORS</span>
             </div>
             <div id="industry_two_en" style="display: none">
                 <div class="menu_right" onclick="search(this)" style='width: 180px;'>
@@ -640,7 +640,7 @@
                 </div>
             </div>
             <div class='menu menu_en' id="area_en" onclick="index(1)" style='width: 180px;'>
-                <span>Area</span>
+                <span>BY REGIONS</span>
             </div>
             <div id="area_two_en" style="display: none">
                 <!--<div class="menu_right" onclick="search(this)" style='width: 180px;'>
@@ -651,7 +651,7 @@
                 </div>-->
             </div>
             <div class='menu menu_en' id="stage_en" onclick="index(1)" style='width: 180px;'>
-                <span>Stage</span>
+                <span>BY STAGES</span>
             </div>
             <div id="stage_two_en" style="display: none">
                 <div class="menu_right" onclick="search(this)" style='width: 180px;'>
