--- a/Public/home/news_detail.html
+++ b/Public/home/news_detail.html
@@ -99,11 +99,11 @@
         "Maison Capital&nbsp;&nbsp;&nbsp;&nbsp;Copy Right©&nbsp;&nbsp;|&nbsp;&nbsp;<a href='law.html' style='text-decoration: none;color: #fff'>Legal explanation</a></div>");
         $('#top').empty();
         $('#top').append("<div style='text-align: right'><a href='#' onclick='chinese()' style='text-decoration: none; color: #000'>中文</a>&nbsp;|&nbsp;<a href='#' onclick='english()' style='text-decoration: none; color: #9b761d'>English</a>" +
-        "</div><ul style='list-style: none;'><li><a href='contact.html?status=1' style='text-decoration: none;' id='contact'>Contact Us</a></li>" +
-        "<li><a href='news.html?status=1' style='text-decoration: none;color: #9b761d' id='news'>News</a></li>" +
-        "<li><a href='case.html?status=1' style='text-decoration: none;'>Investment Case</a></li>" +
-        "<li><a href='team.html?status=1' style='text-decoration: none;' id='team'>Investment Team</a></li>" +
-        "<li><a href='abort.html?status=1' style='text-decoration: none;' id='abort'>About Us</a></li></ul>");
+        "</div><ul style='list-style: none;'><li><a href='contact.html?status=1' style='text-decoration: none;' id='contact'>CONTACTS</a></li>" +
+        "<li><a href='news.html?status=1' style='text-decoration: none;color: #9b761d' id='news'>NEWS</a></li>" +
+        "<li><a href='case.html?status=1' style='text-decoration: none;'>INVESTEMNT</a></li>" +
+        "<li><a href='team.html?status=1' style='text-decoration: none;' id='team'>TEAM</a></li>" +
+        "<li><a href='abort.html?status=1' style='text-decoration: none;' id='abort'>ABOUT US</a></li></ul>");
     }
     function home(){
         var aQuery = window.location.href;  //取得Get参数
