--- a/Public/home/case.html
+++ b/Public/home/case.html
@@ -284,6 +284,7 @@
     pre {
         background-color: #ffffff;
         border: 0;
+        padding: 0;
         font-size: 16px;
         text-align: center;
         font-family: 'Microsoft YaHei';
