--- a/Public/admin/team.html
+++ b/Public/admin/team.html
@@ -190,11 +190,11 @@
                     </li>
                     <li class="active">
                         <a class="dropdown" href="#" data-original-title="Tables"><i class="glyphicon glyphicon-th-list"></i><span
-                                class="hidden-minibar"> 投资团队 <span class="badge bg-primary pull-right">2</span></a>
+                                class="hidden-minibar"> 投资团队 <span class="badge bg-primary pull-right">1</span></a>
                         <ul>
-                            <li><a href="team.html" data-original-title="Basic"><i
+                            <!--<li><a href="team.html" data-original-title="Basic"><i
                                     class="fa fa-table"></i><span>  团队简介</span></a>
-                            </li>
+                            </li>-->
                             <li><a href="member.html" data-original-title="Editable"><i
                                     class="fa fa-table"></i><span>  人员管理</span></a>
                             </li>
