--- a/Public/home/law.html
+++ b/Public/home/law.html
@@ -51,7 +51,7 @@
         }
     })
     function home(){
-        var aQuery = window.location.href;  //取得Get参数
+        var aQuery = window.location.href;  //取得Get参
         if(aQuery.indexOf("status")>0){
             window.location.href='index.html?status=1';
         }else{
