--- a/Public/admin/invest.html
+++ b/Public/admin/invest.html
@@ -346,9 +346,9 @@
                             <a class="btn btn-success" style="float: left"
                                onclick="$('input[id=lefile]').click();">上传</a>
                         </div>
-                        <label class="col-sm-1 control-label">交易股票</label>
+                        <label class="col-sm-2 control-label">香港联交所交易代码</label>
 
-                        <div class="col-sm-4">
+                        <div class="col-sm-3">
                             <input type="text" class="form-control" id="stock" name="stock">
                         </div>
                     </div>
