--- a/Public/home/news_detail.html
+++ b/Public/home/news_detail.html
@@ -101,7 +101,7 @@
         $('#top').append("<div style='text-align: right'><a href='#' onclick='chinese()' style='text-decoration: none; color: #000'>中文</a>&nbsp;|&nbsp;<a href='#' onclick='english()' style='text-decoration: none; color: #9b761d'>English</a>" +
         "</div><ul style='list-style: none;'><li><a href='contact.html?status=1' style='text-decoration: none;' id='contact'>CONTACTS</a></li>" +
         "<li><a href='news.html?status=1' style='text-decoration: none;color: #9b761d' id='news'>NEWS</a></li>" +
-        "<li><a href='case.html?status=1' style='text-decoration: none;'>INVESTEMNT</a></li>" +
+        "<li><a href='case.html?status=1' style='text-decoration: none;'>INVESTEMNTS</a></li>" +
         "<li><a href='team.html?status=1' style='text-decoration: none;' id='team'>TEAM</a></li>" +
         "<li><a href='abort.html?status=1' style='text-decoration: none;' id='abort'>ABOUT US</a></li></ul>");
     }
@@ -247,6 +247,10 @@
     .col-lg-offset-1 {
         margin-left: 8.33333333%
     }
+
+    #img img:hover{
+        cursor: pointer;
+    }
 </style>
 <body>
 <div class="container" style="margin-top: 10px;width: 100% !important;">
@@ -273,7 +277,14 @@
         <img style="width: 100%;height: 250px;" src="/Public/home/images/news1.jpg">
     </div>
 </div>
-<div class="container" style="margin-top: 50px;">
+<div class="container" style="margin-top: -50px;">
+    <div class="row">
+        <div class="col-lg-3 col-lg-offset-1" id="img">
+            <img src="/Public/home/images/news.jpg" onclick="javascript:history.go(-1)" style="opacity:0.9;-webkit-opacity:0.9;">
+        </div>
+    </div>
+</div>
+<div class="container" style="margin-top: 20px;">
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2" style="font-size: 20px; font-weight: 600" id="title"></div>
     </div>
