--- a/Public/home/case.html
+++ b/Public/home/case.html
@@ -54,6 +54,7 @@
         height: 130px;
         border: 1px #cfcfcf solid;
         border-radius: 2px;
+        box-shadow: 0px 3px 6px #999;
     }
 
     #detail div p {
@@ -88,7 +89,7 @@
             $('#top').append("<div style='text-align: right'><a href='case.html' style='text-decoration: none; color: #000'>中文</a>&nbsp;|&nbsp;<a href='case.html?status=1' style='text-decoration: none; color: #9b761d'>English</a>" +
                 "</div><ul style='list-style: none;'><li><a href='contact.html?status=1' style='text-decoration: none;' id='contact'>CONTACTS</a></li>" +
                 "<li><a href='news.html?status=1' style='text-decoration: none;' id='news'>NEWS</a></li>" +
-                "<li><a href='case.html?status=1' style='text-decoration: none;color: #9b761d'>INVESTEMNT</a></li>" +
+                "<li><a href='case.html?status=1' style='text-decoration: none;color: #9b761d'>INVESTEMNTS</a></li>" +
                 "<li><a href='team.html?status=1' style='text-decoration: none;' id='team'>TEAM</a></li>" +
                 "<li><a href='abort.html?status=1' style='text-decoration: none;' id='abort'>ABOUT US</a></li></ul>");
             index(1);
@@ -197,7 +198,7 @@
                 var len = r.msg.length;
                 for (var i = 0; i < len; i++) {
                     $('#detail').append("<div onclick='detail(this)'>" +
-                        "<img style='width: 100%' src='../.." + r.msg[i].img + "' > <p style='font-size:18px;'><span style='display: none'>" + r.msg[i].id + "</span>" + r.msg[i].company + "</p></div>");
+                        "<img style='width: 100%' src='../.." + r.msg[i].img + "' > <p style='font-size:18px;'><span style='display: none'>" + r.msg[i].id + "</span></p></div>");
                 }
                 var height = $(document.body).height();
                 $('#mask').height(height);
@@ -262,8 +263,8 @@
                 $('#detail').empty();
                 var len = r.msg.length;
                 for (var i = 0; i < len; i++) {
-                    $('#detail').append("<div>" +
-                        "<img style='width: 100%' src='../.." + r.msg[i].img + "'><p onclick='detail(this)'><span style='display: none'>" + r.msg[i].id + "</span>" + r.msg[i].company + "</p></div>");
+                    $('#detail').append("<div onclick='detail(this)'>" +
+                        "<img style='width: 100%' src='../.." + r.msg[i].img + "'><p onclick='detail(this)'><span style='display: none'>" + r.msg[i].id + "</span></p></div>");
                 }
                 var height = $(document.body).height();
                 $('#mask').height(height);
@@ -506,15 +507,14 @@
     }
 
     #invest {
-        width: 75%;
         position: fixed;
         z-index: 4;
-        margin-left: 8%;
-        width: 67.5%;
+        margin-left: 17%;
+        width: 66%;
         background-color: #FFFFFF;
         border-radius: 3px;
         height: 450px;
-        margin-top: -150px;
+        margin-top: -200px;
         display: none;
     }
 
@@ -692,7 +692,7 @@
                 </div>
                 <div class=" col-lg-offset-6" style="position: relative;float: left;margin-top: 15px;width:30px !important;border: 2px #b0a065 solid;border-radius: 3px;"></div>
                 <div class="col-lg-6" style="text-align:center;margin-top: 50px">
-                    <img id="invest_img" style="margin: -10px auto; width: 75%" />
+                    <img id="invest_img" style="margin: -10px auto; width: 75%;box-shadow: 0px 3px 6px #999;" />
                 </div>
                 <div class="col-lg-6" style="padding: 0;margin-top:10px;height:330px;overflow: auto;width: 47.4% !important;  ">
                     <div style="padding: 0;width: 100%" id="ch">
@@ -707,7 +707,7 @@
                             <a href="" id="invest_web"></a>
                         </div>
                         <div class="col-lg-11 exit" style="font-size: 16px;">香港联交所交易代码：<span id="invest_stock"></span></div>
-                        <div class="col-lg-11" id="invest_intro" style="font-size: 16px;"></div>
+                        <div class="col-lg-11" id="invest_intro" style="font-size: 16px;padding-top: 15px;"></div>
                     </div>
                     <div style="padding: 0;width: 100%" id="en">
                         <div class="col-lg-12" style="font-size: 16px;">Investment Staged：<span id="invest_stage_en"></span></div>
@@ -722,7 +722,7 @@
                         </div>
                         <div class="col-lg-11 exit invest_en" style="font-size: 16px;">Hongkong Stock Exchange Transaction Code：
                             <span id="invest_stock_en"></span></div>
-                        <div class="col-lg-11 invest_en" id="invest_intro_en" style="font-size: 16px;"></div>
+                        <div class="col-lg-11 invest_en" id="invest_intro_en" style="font-size: 16px;padding-top: 15px;"></div>
                     </div>
                 </div>
             </div>
