--- a/Public/home/index.html
+++ b/Public/home/index.html
@@ -45,7 +45,7 @@
             $('#top').append("<div style='text-align: right'><a href='index.html' style='text-decoration: none; color: #000'>中文</a>&nbsp;|&nbsp;<a href='index.html?status=1' style='text-decoration: none; color: #9b761d'>English</a>" +
             "</div><ul style='list-style: none;'><li><a href='contact.html?status=1' style='text-decoration: none;' id='contact'>CONTACTS</a></li>" +
             "<li><a href='news.html?status=1' style='text-decoration: none;' id='news'>NEWS</a></li>" +
-            "<li><a href='case.html?status=1' style='text-decoration: none;'>INVESTEMNT</a></li>" +
+            "<li><a href='case.html?status=1' style='text-decoration: none;'>INVESTEMNTS</a></li>" +
             "<li><a href='team.html?status=1' style='text-decoration: none;' id='team'>TEAM</a></li>" +
             "<li><a href='abort.html?status=1' style='text-decoration: none;' id='abort'>ABOUT US</a></li></ul>");
             $.ajax({
@@ -225,13 +225,13 @@
     <!-- 轮播（Carousel）项目 -->
     <div class="carousel-inner">
         <div class="item active" style="height: 400px; overflow: hidden;">
-            <img src="/Public/home/images/city1.jpg" style=" width:100%;height: 400px;margin-top: -25px;" alt="First slide">
+            <img src="/Public/home/images/city3.jpg" style=" width:100%;height: 400px;margin-top: -25px;" alt="First slide">
         </div>
         <div class="item" style="height: 400px; overflow: hidden;">
-            <img src="/Public/home/images/city2.jpg" style="width:100%;height: 400px;margin-top: -25px;" alt="Second slide">
+            <img src="/Public/home/images/city1.jpg" style="width:100%;height: 400px;margin-top: -25px;" alt="Second slide">
         </div>
         <div class="item" style="height: 400px; overflow: hidden;">
-            <img src="/Public/home/images/city3.jpg" style="width:100%;height: 400px;margin-top: -25px;" alt="Third slide">
+            <img src="/Public/home/images/city2.jpg" style="width:100%;height: 400px;margin-top: -25px;" alt="Third slide">
         </div>
     </div>
 </div>
