--- a/Public/home/team.html
+++ b/Public/home/team.html
@@ -163,7 +163,7 @@
             $('#top').append("<div style='text-align: right'><a href='team.html' style='text-decoration: none; color: #000'>中文</a>&nbsp;|&nbsp;<a href='team.html?status=1' style='text-decoration: none; color: #9b761d'>English</a>" +
             "</div><ul style='list-style: none;'><li><a href='contact.html?status=1' style='text-decoration: none;' id='contact'>CONTACTS</a></li>" +
             "<li><a href='news.html?status=1' style='text-decoration: none;' id='news'>NEWS</a></li>" +
-            "<li><a href='case.html?status=1' style='text-decoration: none;'>INVESTEMNT</a></li>" +
+            "<li><a href='case.html?status=1' style='text-decoration: none;'>INVESTEMNTS</a></li>" +
             "<li><a href='team.html?status=1' style='text-decoration: none;color: #9b761d' id='team'>TEAM</a></li>" +
             "<li><a href='abort.html?status=1' style='text-decoration: none;' id='abort'>ABOUT US</a></li></ul>");
             $.ajax({
@@ -385,7 +385,7 @@
         position: fixed;
         z-index: 11;
         margin-left: 17%;
-        width: 67.5%;
+        width: 63%;
         background-color: #FFFFFF;
         border-radius: 3px;
         height: 400px;
@@ -405,6 +405,7 @@
     /*定义滚动条高宽及背景 高宽分别对应横竖滚动条的尺寸*/
     ::-webkit-scrollbar {
         width: 4px;
+        height: 4px;
     }
 
     /*定义滚动条轨道 内阴影+圆角*/
@@ -463,17 +464,13 @@
     <img style="margin-left: 96%;margin-top: 15px;" src="images/off.jpg"
          onclick="javascript:$('#detail').css('display','none');$('#mask').css('display','none');document.documentElement.style.overflow='';">
 
-    <div class="col-lg-6" style="text-align:center;margin-top: 10px;">
-        <div style="height: 18px;width: 80px;background-color: #e7e2d0;margin-left: 20px;"></div>
-        <div style="height: 62px;width: 18px;background-color: #e7e2d0;margin-left: 20px;float: left"></div>
-        <img id="member_img" style="margin: 0 auto; width: 80%;height: 270px; float: left"/>
-        <div style="height: 124px;width: 12px;background-color: #f3f1e8;float: left;margin-top: 146px;"></div>
-        <div style="height: 12px;width: 136px;background-color: #f3f1e8;margin-top: 270px;position: absolute;right: 50px;"></div>
+    <div class="col-lg-6" style="text-align:center;margin-top: 60px;">
+        <img id="member_img" style="margin: 0 auto;margin-left: 30px; width: 290px;height: 220px;box-shadow: 0px 3px 6px #999; float: left"/>
     </div>
     <div class="col-lg-6" style="padding: 0;margin-top:0px;width: 47.4% !important;  ">
         <div class="col-lg-11" style="text-align: center"><span id="name"
                                                                 style="font-size: 24px;color: #4c4c4c;"></span></div>
-        <div style="overflow: auto;height:300px;padding: 0;width: 100%;">
+        <div style="height:300px;padding: 0;width: 100%;">
             <div class="col-lg-11" style="text-align: center"><span id="en_name"
                                                                     style="font-size: 14px;color: #4c4c4c;"></span>
             </div>
@@ -482,7 +479,7 @@
             </div>
             <div class="col-lg-1 col-lg-offset-5"
                  style="margin-top: 15px;width:5% !important;border: 2px #b0a065 solid;border-radius: 3px;"></div>
-            <div class="col-lg-12" id="intro" style="margin-top:15px;font-size: 16px !important;color: #4c4c4c;"></div>
+            <div class="col-lg-12" id="intro" style="margin-top:15px;font-size: 16px !important;color: #4c4c4c;overflow: auto;height: 215px;"></div>
         </div>
     </div>
 </div>
