--- a/Public/home/contact.html
+++ b/Public/home/contact.html
@@ -74,7 +74,7 @@
                 success: function (r) {
                     var len = r.msg.length;
                     for (var i = 0; i < len; i++) {
-                        $('#city_list').append("&nbsp;&nbsp;&nbsp;&nbsp;<span class='city_name' onclick='show(this)'>" + r.msg[i].city + "</span>");
+                        $('#city_list').append("&nbsp;&nbsp;&nbsp;<span class='city_name' onclick='show(this)'>" + r.msg[i].city + "</span>");
                         $('#city').append("<div class='row detail'>" +
                         "<div class='hidden'>" + r.msg[i].city + "</div>" +
                         "<div class='col-lg-4 col-lg-offset-1'><img style='width: 110%' src='../.." + r.msg[i].img + "'>" +
@@ -102,7 +102,7 @@
                 success: function (r) {
                     var len = r.msg.length;
                     for (var i = 0; i < len; i++) {
-                        $('#city_list').append("&nbsp;&nbsp;&nbsp;&nbsp;<span class='city_name' onclick='show(this)'>" + r.msg[i].city + "</span>");
+                        $('#city_list').append("&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class='city_name' onclick='show(this)'>" + r.msg[i].city + "</span>");
                         $('#city').append("<div class='row detail'>" +
                         "<div class='hidden'>" + r.msg[i].city + "</div>" +
                         "<div class='col-lg-5 col-lg-offset-1'><img style='width: 100%' src='../.." + r.msg[i].img + "'>" +
