--- a/Public/home/case.html
+++ b/Public/home/case.html
@@ -89,7 +89,7 @@
             $('#top').append("<div style='text-align: right'><a href='case.html' style='text-decoration: none; color: #000'>中文</a>&nbsp;|&nbsp;<a href='case.html?status=1' style='text-decoration: none; color: #9b761d'>English</a>" +
                 "</div><ul style='list-style: none;'><li><a href='contact.html?status=1' style='text-decoration: none;' id='contact'>CONTACTS</a></li>" +
                 "<li><a href='news.html?status=1' style='text-decoration: none;' id='news'>NEWS</a></li>" +
-                "<li><a href='case.html?status=1' style='text-decoration: none;color: #9b761d'>INVESTEMNTS</a></li>" +
+                "<li><a href='case.html?status=1' style='text-decoration: none;color: #9b761d'>INVESTMENTS</a></li>" +
                 "<li><a href='team.html?status=1' style='text-decoration: none;' id='team'>TEAM</a></li>" +
                 "<li><a href='abort.html?status=1' style='text-decoration: none;' id='abort'>ABOUT US</a></li></ul>");
             index(1);
