--- a/Public/home/news.html
+++ b/Public/home/news.html
@@ -72,7 +72,7 @@
             $('#top').append("<div style='text-align: right'><a href='news.html' style='text-decoration: none; color: #000'>中文</a>&nbsp;|&nbsp;<a href='news.html?status=1' style='text-decoration: none; color: #9b761d'>English</a>" +
             "</div><ul style='list-style: none;'><li><a href='contact.html?status=1' style='text-decoration: none;' id='contact'>CONTACTS</a></li>" +
             "<li><a href='news.html?status=1' style='text-decoration: none;color: #9b761d' id='news'>NEWS</a></li>" +
-            "<li><a href='case.html?status=1' style='text-decoration: none;'>INVESTEMNTS</a></li>" +
+            "<li><a href='case.html?status=1' style='text-decoration: none;'>INVESTMENTS</a></li>" +
             "<li><a href='team.html?status=1' style='text-decoration: none;' id='team'>TEAM</a></li>" +
             "<li><a href='abort.html?status=1' style='text-decoration: none;' id='abort'>ABOUT US</a></li></ul>");
             $.ajax({
