--- a/Public/home/contact.html
+++ b/Public/home/contact.html
@@ -86,7 +86,7 @@
                     $('#city_list').find('span').first().css('border-bottom','2px #9b761d solid');
                     $('#city_one').append("<div class='row'><div class='col-lg-4 col-lg-offset-1'><img style='width: 110%' src='../.." + r.msg[0].img + "'>" +
                     "</div>" +
-                    "<div class='col-lg-5 col-lg-offset-1 contact' style='padding-left: 50px;margin-top: 30px;'><p><span>Tel：</span>" + r.msg[0].tel + "</p><p><span>Fax：</span>" + r.msg[0].fax + "</p><p><span>E-mail：</span>" + r.msg[0].email + "</p><p><span>Addr：</span>" + r.msg[0].add + "</p>" +
+                    "<div class='col-lg-5 col-lg-offset-1 contact' style='padding-left: 50px;margin-top: 30px;'><p><span>T：</span>" + r.msg[0].tel + "</p><p><span>F：</span>" + r.msg[0].fax + "</p><p><span>E：</span>" + r.msg[0].email + "</p><p><span>A：</span>" + r.msg[0].add + "</p>" +
                     "</div>" +
                     "</div>");
                     if (r.msg[0].agent == 1) {
@@ -102,7 +102,7 @@
                 success: function (r) {
                     var len = r.msg.length;
                     for (var i = 0; i < len; i++) {
-                        $('#city_list').append("&nbsp;&nbsp;&nbsp;&nbsp;<span class='city_name' onclick='show(this)'>" + r.msg[i].city + "</span>&nbsp;&nbsp;&nbsp;&nbsp;");
+                        $('#city_list').append("&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class='city_name' onclick='show(this)'>" + r.msg[i].city + "</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;");
                         $('#city').append("<div class='row detail'>" +
                         "<div class='hidden'>" + r.msg[i].city + "</div>" +
                         "<div class='col-lg-5 col-lg-offset-1'><img style='width: 100%' src='../.." + r.msg[i].img + "'>" +
