--- a/Public/home/case.html
+++ b/Public/home/case.html
@@ -39,7 +39,7 @@
 
     #detail {
         padding: 0;
-        padding-left: 10px;
+        padding-left: 30px;
     }
 
     #detail div {
@@ -48,13 +48,14 @@
         width: 27%;
         position: relative;
         float: left;
+        padding-top: 10px;
     }
 
     #detail div img {
         height: 130px;
         border: 1px #cfcfcf solid;
         border-radius: 2px;
-        box-shadow: 0px 3px 6px #999;
+        box-shadow: 0px 1px 3px #ccc;
     }
 
     #detail div p {
@@ -507,14 +508,15 @@
     }
 
     #invest {
-        position: fixed;
+        position: absolute;
         z-index: 4;
-        margin-left: 8%;
-        width: 65%;
+        margin: auto;
+        width: 60%;
+        top: 45%;
+        left: 20%;
         background-color: #FFFFFF;
         border-radius: 3px;
-        height: 450px;
-        margin-top: -180px;
+        height: 410px;
         display: none;
     }
 
@@ -694,7 +696,7 @@
                 <div class="col-lg-6" style="text-align:center;margin-top: 50px">
                     <img id="invest_img" style="margin: -10px auto; width: 75%;box-shadow: 0px 3px 6px #999;" />
                 </div>
-                <div class="col-lg-6" style="padding: 0;margin-top:10px;height:330px;overflow: auto;width: 47.4% !important;  ">
+                <div class="col-lg-6" style="padding: 0;margin-top:10px;height:305px;overflow: auto;width: 47.4% !important;  ">
                     <div style="padding: 0;width: 100%" id="ch">
                         <div class="col-lg-12" style="font-size: 16px;">投资阶段：<span id="invest_stage"></span></div>
                         <div class="col-lg-11" style="font-size: 16px;">投资时间：<span id="invest_time"></span></div>
