--- a/Public/home/team.html
+++ b/Public/home/team.html
@@ -381,14 +381,14 @@
     }
 
     #detail {
-        position: fixed;
+        position: absolute;
         z-index: 11;
-        margin-left: 17%;
-        width: 63%;
+        top: 45%;
+        left: 20%;
+        width: 60%;
         background-color: #FFFFFF;
         border-radius: 3px;
         height: 420px;
-        margin-top: -250px;
         display: none;
     }
 
