--- a/Public/home/case.html
+++ b/Public/home/case.html
@@ -508,11 +508,10 @@
     }
 
     #invest {
-        position: absolute;
+        position: fixed;
         z-index: 4;
-        margin: auto;
         width: 60%;
-        top: 35%;
+        top: 20%;
         left: 20%;
         background-color: #FFFFFF;
         border-radius: 3px;
