--- a/Public/home/team.html
+++ b/Public/home/team.html
@@ -381,9 +381,9 @@
     }
 
     #detail {
-        position: absolute;
+        position: fixed;
         z-index: 11;
-        top: 35%;
+        top: 20%;
         left: 20%;
         width: 60%;
         background-color: #FFFFFF;
